# object_detector_tensorflow

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.old  README.md  build_docker.sh  package.xml  setup.cfg  setup.py  start_docker.sh
config/: params.yaml
example/: detect_objects_client.py
launch/: detection.launch.py  object_detector_tensorflow.launch.py
lib/: object_detection.py
msg/: Detection.msg
object_detection_tensorflow/: __init__.py  diagnostics.py  example_usage.py  object_detection.py  ros_node.py
object_detector_tensorflow/: __main__.py  base_node.py  client.py  continuous_detection.py  continuous_detection_node.py  continuous_detectiony.py  detect_objects_client.py  detection_node.py  example_usage.py  object_detection.py  ros_node.py  single_detection.py  visualization.py
object_detector_tensorflow/scripts/: object_detection.py  visualization.py
odtf/: Orientation.py  object_detection.py  visualization.py
ros/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ros/config/: params.yaml  params.yaml.example
ros/launch/: continuous_detection.launch.py  detection.launch.py
ros/object_detector_tensorflow/: base_node.py  client.py  continuous_detection_node.py  detection_node.py  diagnostics.py  package.xml  setup.cfg  setup.py
ros/object_detector_tensorflow/config/: params.yaml
ros/object_detector_tensorflow/data/: label_map.txt  label_map.txt.example
ros/object_detector_tensorflow/launch/: continuous_detection.launch.py  detect_and_transform.launch.py  detection.launch.py
ros/object_detector_tensorflow/object_detector_tensorflow/: DummyPublisher.py  base_node.py  client.py  continuous_detection_node.py  detect_and_transform_client.py  detect_and_transform_node.py  detection_node.py
ros/object_detector_tensorflow_interfaces/: CMakeLists.txt  package.xml
ros/object_detector_tensorflow_interfaces/msg/: Detection.msg  Detections.msg  Orientation.msg
ros/object_detector_tensorflow_interfaces/srv/: DetectObjectPosition.srv  DetectObjectPositions.srv  DetectObjects.srv
srv/: DetectObjects.srv
