<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detector_tensorflow</name>
  <version>0.0.0</version>
  <description>Python based ROS Node for TensorFlow Object Detection Inference</description>
  <maintainer email="andreas.zachariae@hs-karlsruhe.de">Andreas Zachariae</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>cv_bridge</depend>
  <depend>point_transformation_interfaces</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
